--- a/index.html
+++ b/index.html
@@ -1,1 +1,61 @@
-Hello World
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Ini title</title>
+</head>
+<body>
+    <p> 1. [https://brainly.co.id/tugas/5721946](https://brainly.co.id/tugas/5721946)
+        2. [https://brainly.co.id/tugas/6704221](https://brainly.co.id/tugas/6704221)
+        3. [https://brainly.co.id/tugas/16556716](https://brainly.co.id/tugas/16556716)
+        4. 
+        5. [https://brainly.co.id/tugas/348207](https://brainly.co.id/tugas/348207)
+        6. [https://brainly.co.id/tugas/1330072](https://brainly.co.id/tugas/1330072)
+        7. [https://brainly.co.id/tugas/2021474](https://brainly.co.id/tugas/2021474)
+        8. [https://brainly.co.id/tugas/6400663](https://brainly.co.id/tugas/6400663)
+        9. [https://brainly.co.id/tugas/30715589](https://brainly.co.id/tugas/30715589)
+        10. [https://brainly.co.id/tugas/6525850](https://brainly.co.id/tugas/6525850)
+        11. [https://brainly.co.id/tugas/7072906](https://brainly.co.id/tugas/7072906)
+        12. -
+        13. [https://brainly.co.id/tugas/13541998](https://brainly.co.id/tugas/13541998)
+        14. [https://brainly.co.id/tugas/8776858](https://brainly.co.id/tugas/8776858)  (no answer)
+        15. [https://brainly.co.id/tugas/8541137](https://brainly.co.id/tugas/8541137)
+        16. [https://brainly.co.id/tugas/8541285](https://brainly.co.id/tugas/8541285)
+        17. [https://brainly.co.id/tugas/18331000](https://brainly.co.id/tugas/18331000)
+        18.  
+        19.  
+        20. [https://brainly.co.id/tugas/4742442](https://brainly.co.id/tugas/4742442)
+        21.  
+        22.  
+        23. [https://brainly.co.id/tugas/534920](https://brainly.co.id/tugas/534920)
+        24. [https://brainly.co.id/tugas/16735690](https://brainly.co.id/tugas/16735690)
+        25. [https://brainly.co.id/tugas/6542861](https://brainly.co.id/tugas/6542861)
+        26.  
+        27. [https://brainly.co.id/tugas/6586146](https://brainly.co.id/tugas/6586146) 
+        28. [https://brainly.co.id/tugas/23718383](https://brainly.co.id/tugas/23718383) 
+        29. [https://brainly.co.id/tugas/30460931](https://brainly.co.id/tugas/30460931) 
+        30. [https://brainly.co.id/tugas/3274126](https://brainly.co.id/tugas/3274126) 
+        31.  
+        32.  
+        33.  
+        34.  
+        35.  
+        36. [https://brainly.co.id/tugas/16857565](https://brainly.co.id/tugas/16857565)
+        37. [https://brainly.co.id/tugas/30420656](https://brainly.co.id/tugas/30420656)
+        38. [https://brainly.co.id/tugas/6786104](https://brainly.co.id/tugas/6786104)
+        39.  
+        40. [https://brainly.co.id/tugas/23720664](https://brainly.co.id/tugas/23720664)
+        41. [https://brainly.co.id/tugas/364875](https://brainly.co.id/tugas/364875) 
+        42. [https://www.avkimia.com/2017/07/tutorial-singkat-menjawab-soal-kimia-kimia-bab-sifat-koligatif-larutan-bagian-3-tentang-penurunan-titik-beku.html](https://www.avkimia.com/2017/07/tutorial-singkat-menjawab-soal-kimia-kimia-bab-sifat-koligatif-larutan-bagian-3-tentang-penurunan-titik-beku.html)  (Soal no.6)
+        43. [https://brainly.co.id/tugas/2990324](https://brainly.co.id/tugas/2990324) 
+        44. [https://brainly.co.id/tugas/26061890](https://brainly.co.id/tugas/26061890)
+        45. [https://brainly.co.id/tugas/6971033](https://brainly.co.id/tugas/6971033) 
+        46. [https://www.avkimia.com/2017/07/tutorial-singkat-menjawab-soal-kimia-kimia-bab-sifat-koligatif-larutan-bagian-3-tentang-penurunan-titik-beku.html](https://www.avkimia.com/2017/07/tutorial-singkat-menjawab-soal-kimia-kimia-bab-sifat-koligatif-larutan-bagian-3-tentang-penurunan-titik-beku.html) (Soal no. 9)
+        47.  
+        48. [https://brainly.co.id/tugas/782851](https://brainly.co.id/tugas/782851)
+        49. [https://brainly.co.id/tugas/7166790](https://brainly.co.id/tugas/7166790)
+        50.
+    </p>
+</body>
+</html>
